--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^15.1.2
   scrollable_positioned_list: ^0.3.8
+  icons_launcher: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -90,3 +91,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+icons_launcher:
+  image_path: "assets/images/logo_dark.png"
+  platforms:
+    android:
+      enable: true
+#    ios:
+#      enable: true
